  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (e.g. followers) - TTv4

KNOWN ISSUES:
  Corrupted color display on longer posts. XBMC bug as of Frodo 12.1
  
Current Version : 2.1.5

*** 2.1.6 ***

Improved smilies appearance
Changed keyboard mods output on one smiley from :/ to :-/

*** 2.1.5 ***

Forgot to include the new font file in the last update, so here it is :)

*** 2.1.4 ***

Added smilies to Generic keyboard skin and changed it's appearance
Added smilies to Transparency! keyboard skin
Video skin now shows forum stats - currently works only with Tapatalk
Video skin now has unread markers for forums and unread threads are highlighted
Returning to a window when stacking is disabled now returns to previously selected item
Improved image representation in posts
Fix for images in quotes and image numbering in quotes
Real underline tag [u][/u] support
Tapatalk: Encoding from API now used when available
Added encoding detection when encoding not provided
ParserBrowser: IP Board: Fix for thread parsing showing no threads on some forums
Tapatalk: User info now cached, which should speed up browsing through the pages of a thread

*** 2.1.3 ***

Added smilies to Confluence keyboard skin
Added missing smilies dialog (for site smilies) for the light/dark skins 

*** 2.1.2 ***

Added a detail display on the image slide out on the full message view of the Video skin
Made the links slide out on the full message view taller on the Video skin
Fixed the numbers for post images for counts over 20 when the skin mods are enabled
Modified font to include more circled numbers for the post image representations
Added 'Video' keyboard (fits under video when playing) with smilies
Tapatalk: Added ability to use forum specific smilies when available